tests/NormalTests/paczka1/fuzzy1/26532043.err
Error in line 12: Elpb S272 135,2
Error in line 31: RUgekfgy9x0 A979 79,7
Error in line 34: WnqL S272 86,3
